src/css/Header.css
.header {
  /* display: flex;
  justify-content: center; */
  font-size: 2rem;

  margin-left: 20px;
}

.header span {
  opacity: 0;
  transform: translateX(20px);
  animation: appear 0.5s forwards;
}

.header {
  padding-bottom: 10px;
}

@keyframes appear {
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.header-container {
  /* border: 2px solid red; */
  min-height: 147px;
  width: 100%;
  background-color: black;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  cursor: pointer;
  position: sticky;
  top: 0;
}
.dashboard-container {
  width: 100%;
}
.t1 {
  font-size: 25px;
  color: #e1c956;
  font-weight: 550;
}
.t2 {
  font-size: 50px;
  font-weight: bold;
  color: white;
}

.main-container-1 {
  background-image: url("../../public/haircut1.webp");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  height: 85vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.review-button {
  position: relative;
  overflow: hidden;
  width: 150px;
  background-color: transparent;
  font-size: larger;
  color: White;
  font-weight: 550;
  margin-top: 70px;
  border: 1px solid #e1c956;
  border-radius: 8px;
  z-index: 1;
  transition: color 0.3s ease;
  margin-left: 20px;
}

.review-button::before {
  content: "";
  position: absolute;
  inset: 0;
  background-color: #e1c956;
  border-radius: inherit;
  transition: transform 1s ease;
  transform: scale(1);
  transform-origin: center;
  z-index: -1;
}

.review-button:hover::before {
  transform: scale(0);
}
.review-button:hover {
  color: #e1c956;
}

.head-option-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  /* width: 100%; */
  width: 60%;
}

.header-content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  font-size: large;
  font-weight: 600;
  color: white;
  /* border: 2px solid red; */
  width: 80%;
}
.salon-logo {
  height: 80px;
  border-radius: 20px;
}
/* .appointment-button {
  border: 1px solid white;
  background-color: black;
  color: white;
} */
.appointment-button {
  border: 1px solid white;
  background-color: black;
  color: white;
  padding: 10px 20px;
  font-size: 16px;
  transition: background-color 0.5s ease, color 0.5s ease;
  cursor: pointer;
}

.appointment-button:hover {
  background-color: white;
  color: #e1c956;
}

.section1-container {
  background-color: #404040;
  height: 80vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.section1-img1 {
  height: 65vh;
  border-radius: 50%;
}

.section-content {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  min-width: 70%;
}
.section1-main1 {
  color: white;
  font-size: large;
  font-weight: 600;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 35vw;
  height: 50vh;
}
.section1-button {
  position: relative;
  overflow: hidden;
  width: 150px;
  font-weight: bold;
  padding: 10px 20px;
  background-color: transparent;
  color: white;
  border: 2px solid #e1c956;
  cursor: pointer;
  transition: color 1s ease;
  z-index: 1;
}
.section1-button:onhover {
  color: white;
}

.section1-button::before {
  content: "";
  inset: 0;
  position: absolute;
  background-color: #e1c956;
  transform: scale(0);
  transform-origin: center;
  transition: transform 1s ease;
  border-radius: 50%;
  z-index: -1;
}

.section1-button:hover::before {
  transform: scale(2); /* expand outwards */
}

.section2-container {
  background-color: #303030;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
.section2-t1 {
  font-size: xx-large;
  font-weight: bold;
  color: white;
  margin: 30px;
}

.section2-t2 {
  color: white;
  font-size: large;
  margin-bottom: 30px;
}

.section2-card-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  width: 85vw;
}

.card-container {
  width: 23vw;
  height: 30vh;

  padding: 50px 30px 40px 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: black;
  border-radius: 20px;
  margin: 10px;
}

.card-container:hover {
  background-image: url("../assets/cardimg1.jpg");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}

.card-t1 {
  color: white;
  font-size: x-large;
  font-weight: 550;
}
.card-t2 {
  color: white;
  font-size: large;
}
.card-button {
  width: 350px;
  background-color: transparent;
  border: 2px solid #e1c956;
  outline: none;
  color: white;
  font-weight: bold;
  font-size: large;
}

.section3-container {
  background-color: #404040;
  display: flex;
  flex-direction: row;
  padding-top: 70px;
  height: 100vh;
  padding-left: 100px;
}
.section3-t1 {
  height: 76vh;
  min-width: 50vw;
  background-color: black;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding-left: 100px;
  font-size: larger;
  color: white;
}
.section3-img1 {
  height: 68vh;
  width: 30vw;
  position: relative;
  left: 150px;
  top: 100px;
}

